--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.93.2",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
     "socket.io": "^4.8.3"
